--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "symfony/filesystem": "*"
     },
     "autoload": {
         "psr-4": { "Chigi\\Component\\IO\\": "src/" }
