--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "php": ">=5.4",
         "symfony/filesystem": "*"
     },
+    "require-dev": {
+        "mikey179/vfsStream": "~1"
+    },
     "autoload": {
         "psr-4": { "Chigi\\Component\\IO\\": "src/" }
     }
